--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidKotlinSample</string>
+
+    <string name="back_msg">한번 더 누르면 종료됩니다.</string>
 </resources>
